tests/NormalTests/paczka1/fuzzy1/12671611.err
Error in line 3: NK5UsNEsdAx A311 0,f
Error in line 13: NK5UsNEsdAx A311 2,7
Error in line 11: Gd6JyJJI A831 58,1
Error in line 28: KVyCmBt0 A831 8,1
Error in line 32: KVyCmBt0 A311 35,2
Error in line 38: 4CJURdoMn A865 39,7
